tooling/nargo_cli/tests/snapshots/execution_success/signed_inactive_division_by_zero/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: i32, b: i32, condition: bool) -> pub i32 {
    if condition {
        a / b
    } else {
        0
    }
}
