tooling/nargo_cli/tests/snapshots/execution_success/signed_inactive_division_by_zero/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i32, v1: i32, v2: u1):
    (no terminator instruction)
}
[signed_inactive_division_by_zero] Circuit output: 0
